# affinity

./: .gitignore  CMakeLists.txt  GPU.md  LICENSE  README.md  Readme.md  affinity.h  affinity_check.c  affinity_openmp.c  cuda.cpp  cuda.md  gpu.cpp  gpu.hpp  hip.cpp  makefile  makefile.cray  mpi.cpp  omp.cpp  readme.md  rocm.cpp  rocm.hpp  test.cuda  test_cuda.cpp  test_mpi.cpp  test_omp.cpp  util.cpp  util.h
ci/: gitlab-ci.yml
